# PythonCLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test-linux.yml  build-test-ubuntu.yml  build-test-windows.yml
install/lib/python/pyClass/: pyClass.lib  pyClass.pyd
src/: baseWrapper.cpp  myClass.cpp  python_example.cpp
src/testenv/baseWrapper/: baseWrapperTest.py
src/testenv/myClass/: myClassTest.py
